--- a/supervisor-worker.conf
+++ b/supervisor-worker.conf
@@ -1,5 +1,6 @@
+# Worker
 [program:worker-upsert]
-command = celery worker -A hotel.celery --autoscale=5,3  -l info -E -P gevent --purge 
+command = celery worker -A hotel.celery -l info -E -P gevent --autoscale=5,3
 directory=/usr/src/api 
 stopsignal=QUIT
 stopasgroup=true
@@ -10,3 +11,15 @@ redirect_stderr=true
 stdout_logfile=/var/log/worker.log
 stdout_logfile_maxbytes = 50MB
 environment=HOTEL_SETTINGS_PATH=/usr/src/api/docker_prd/hotel.env 
+
+
+# Moniter
+[program:celery-flower]
+command=celery flower -A hotel  --port=5001
+numprocs=1
+directory=/usr/src/api
+autostart=true
+autorestart=true
+logfile_backups=20
+stdout_logfile=/var/log/flower.log
+stdout_logfile_maxbytes = 50MB
