--- a/docker_stg/hotel.env
+++ b/docker_stg/hotel.env
@@ -3,12 +3,12 @@ PYTHONUNBUFFERED=True
 PYTHONIOENCODING=utf-8
 SETTINGS_MODULE=hotel.settings.local
 SECRET_KEY=secret_key
-DATABASE_URL=mongodb://localhost:27017/hotel
+DATABASE_URL=mongodb://mongodb:27018/hotel
 MONGODB_CONNECT=False
 
-REDIS_URL=redis://localhost:6379/3
-CELERY_BROKER_URL=redis://localhost:6379/1
-CELERY_RESULT_BACKEND=redis://localhost:6379/2
+REDIS_URL=redis://redis:6379/3
+CELERY_BROKER_URL=redis://redis:6379/1
+CELERY_RESULT_BACKEND=redis://redis:6379/2
 CELERY_TIMEZONE=Asia/Taipei
 CELERY_ACCEPT_CONTENT=json
 CELERY_TASK_SERIALIZER=json
