--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 amqp==2.5.2
 asn1crypto==0.24.0
-Babel==2.6.0
 billiard==3.6.3.0
 celery==4.4.2
 cffi==1.12.2
@@ -15,15 +14,11 @@ flask-mongoengine==0.9.5
 Flask-Redis==0.4.0
 Flask-Script==2.0.6
 Flask-WTF==0.14.3
-gevent==20.5.0
-greenlet==0.4.15
-gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 kombu==4.6.8
 MarkupSafe==1.1.1
 mongoengine==0.17.0
-numpy==1.16.2
 oauthlib==3.0.1
 pycparser==2.19
 PyJWT==1.7.1
@@ -37,3 +32,5 @@ vine==1.3.0
 Werkzeug==1.0.1
 WTForms==2.2.1
 uwsgi==2.0.18
+uwsgitop==0.11
+flower==0.9.5
