--- a/supervisord.conf
+++ b/supervisord.conf
@@ -24,5 +24,10 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 ; interpreted as relative to this file.  Included files *cannot*
 ; include files themselves.
 
+[inet_http_server]
+port = 9001
+username = root
+password = root
+
 [include]
 files = /etc/supervisor/conf.d/*.conf
