--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flask-mongoengine==0.9.5
 Flask-Redis==0.4.0
 Flask-Script==2.0.6
 Flask-WTF==0.14.3
+gevent
 itsdangerous==1.1.0
 Jinja2==2.11.2
 kombu==4.6.8
