--- a/docker_stg/docker-compose.yml
+++ b/docker_stg/docker-compose.yml
@@ -1,5 +1,30 @@
 version: "2"
+
+volumes:
+    prometheus_data: {}
+    grafana_data: {}
+
 services:
+    prometheus:
+      image: prom/prometheus:v2.1.0
+      volumes:
+        - ./prometheus.yaml:/etc/prometheus/prometheus.yaml
+      command:
+        - '--config.file=/etc/prometheus/prometheus.yaml'
+      ports:
+        - '9090:9090'
+
+    grafana:
+      image: grafana/grafana
+      volumes:
+        - grafana_data:/var/lib/grafana
+      environment:
+        - GF_SECURITY_ADMIN_PASSWORD=pass
+      depends_on:
+        - prometheus
+      ports:
+        - '3000:3000'
+
     redis:
         hostname: redis
         image: redis
