--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==2.5.2
 asn1crypto==0.24.0
+Babel==2.6.0
 billiard==3.6.3.0
 celery==4.4.2
 cffi==1.12.2
@@ -11,16 +12,23 @@ Flask-Caching==1.8.0
 Flask-Cors==3.0.8
 Flask-Headers==1.0
 flask-mongoengine==0.9.5
-Flask-Redis==0.4.0
+flask-redis==0.4.0
 Flask-Script==2.0.6
 Flask-WTF==0.14.3
-gevent
+flower==0.9.5
+gevent==20.5.0
+greenlet==0.4.15
+gunicorn==19.9.0
+humanize==2.6.0
+importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 kombu==4.6.8
 MarkupSafe==1.1.1
 mongoengine==0.17.0
+numpy==1.16.2
 oauthlib==3.0.1
+prometheus-client==0.8.0
 pycparser==2.19
 PyJWT==1.7.1
 pymongo==3.7.2
@@ -29,9 +37,10 @@ raven==6.10.0
 redis==3.2.1
 six==1.12.0
 supervisor==4.2.0
+tornado==6.0.4
+uWSGI==2.0.18
+uwsgitop==0.11
 vine==1.3.0
 Werkzeug==1.0.1
 WTForms==2.2.1
-uwsgi==2.0.18
-uwsgitop==0.11
-flower==0.9.5
+zipp==3.1.0
