--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -8,6 +8,8 @@ chdir = /usr/src/api
 http = :8888
 socket = :8700
 
+listen = 4096
+
 buffer-size = 65535
 chmod-socket = 660
 vacuum = true
@@ -17,7 +19,7 @@ http-timeout = 240
 socket-timeout = 240
 lazy-apps = true
 single-interpreter = true
-log-slow=3000
+log-slow = 3000
 
 # Moniter
 stats = :5002
