add uwsgi process monitoring function

--- a/docker_stg/hotel.env
+++ b/docker_stg/hotel.env
@@ -3,6 +3,8 @@ PYTHONUNBUFFERED=True
 PYTHONIOENCODING=utf-8
 SETTINGS_MODULE=hotel.settings.local
 SECRET_KEY=secret_key
+DEBUG_METRICS=false
+prometheus_multiproc_dir=prometheus
 DATABASE_URL=mongodb://mongodb:27017/hotel
 MONGODB_CONNECT=False
 
@@ -14,6 +16,7 @@ CELERY_ACCEPT_CONTENT=json
 CELERY_TASK_SERIALIZER=json
 CELERY_RESULT_SERIALIZER=json
 CELERY_TASK_RESULT_EXPIRES=600
+CELERYD_MAX_TASKS_PER_CHILD=100
 
 LOG_FILE_PATH=/var/log/hotel.log
 ERROR_LOG_FILE_PATH=/var/log/hotel.log
