--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ asn1crypto==0.24.0
 Babel==2.6.0
 billiard==3.6.3.0
 celery==4.4.2
+certifi==2020.6.20
 cffi==1.12.2
+chardet==3.0.4
 Click==7.0
 cryptography==2.6.1
 decorator==4.4.0
@@ -20,6 +22,7 @@ gevent==20.5.0
 greenlet==0.4.15
 gunicorn==19.9.0
 humanize==2.6.0
+idna==2.10
 importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -29,15 +32,18 @@ mongoengine==0.17.0
 numpy==1.16.2
 oauthlib==3.0.1
 prometheus-client==0.8.0
+prometheus-flask-exporter==0.15.4
 pycparser==2.19
 PyJWT==1.7.1
 pymongo==3.7.2
 pytz==2018.9
 raven==6.10.0
 redis==3.2.1
+requests==2.24.0
 six==1.12.0
 supervisor==4.2.0
 tornado==6.0.4
+urllib3==1.25.10
 uWSGI==2.0.18
 uwsgitop==0.11
 vine==1.3.0
