--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,6 +3,8 @@ module = manage:app
 
 master = true 
 processes = 10
+threads = 4
+enable_threads = true
 chdir = /usr/src/api
 
 http = :8888
@@ -17,8 +19,8 @@ logto = /var/log/api.log
 
 http-timeout = 240
 socket-timeout = 240
-lazy-apps = true
 single-interpreter = true
+harakiri = 30
 log-slow = 3000
 
 # Moniter
