--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 amqp==2.5.2
+aniso8601==8.0.0
 asn1crypto==0.24.0
+attrs==20.3.0
 Babel==2.6.0
 billiard==3.6.3.0
 celery==4.4.2
@@ -15,6 +17,7 @@ Flask-Cors==3.0.8
 Flask-Headers==1.0
 flask-mongoengine==0.9.5
 flask-redis==0.4.0
+flask-restplus==0.13.0
 Flask-Script==2.0.6
 Flask-WTF==0.14.3
 flower==0.9.5
@@ -26,8 +29,10 @@ idna==2.10
 importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonschema==3.2.0
 kombu==4.6.8
 MarkupSafe==1.1.1
+mistune==0.8.4
 mongoengine==0.17.0
 numpy==1.16.2
 oauthlib==3.0.1
@@ -36,7 +41,9 @@ prometheus-flask-exporter==0.15.4
 pycparser==2.19
 PyJWT==1.7.1
 pymongo==3.7.2
+pyrsistent==0.17.3
 pytz==2018.9
+PyYAML==5.3.1
 raven==6.10.0
 redis==3.2.1
 requests==2.24.0
