--- a/docker_stg/prometheus.yaml
+++ b/docker_stg/prometheus.yaml
@@ -11,5 +11,5 @@ scrape_configs:
   - job_name: 'api_monitor'
     scrape_interval: 5s
     static_configs:
-      - targets: ['nginx:80']
+      - targets: ['flask:9200']
 
