add celery cronjob

--- a/supervisor-worker.conf
+++ b/supervisor-worker.conf
@@ -1,3 +1,18 @@
+# Cronjob
+[program:celery-beat]
+command = celery beat -A hotel.celery -l info
+directory=/usr/src/api
+stopsignal=QUIT
+stopasgroup=true
+killasgroup=true
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/log/worker.log
+stdout_logfile_maxbytes = 50MB
+environment=HOTEL_SETTINGS_PATH=/usr/src/api/docker_prd/hotel.env
+
+
 # Worker
 [program:worker-upsert]
 command = celery worker -A hotel.celery -l info -E -P gevent --autoscale=5,3
