--- a/docker_stg/nginx/nginx.conf
+++ b/docker_stg/nginx/nginx.conf
@@ -23,9 +23,9 @@ http {
         
         access_log /var/log/nginx/access.log main;  
         error_log /var/log/nginx/error.log;    
-        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                  '$status $body_bytes_sent "$http_referer" '
-                  '"$http_user_agent" "$http_x_forwarded_for"';
+        log_format  main  '$remote_addr - $remote_user [$time_local] $http_host $request_method "$uri" "$query_string" '
+                          '$status $body_bytes_sent "$http_referer" $upstream_status $upstream_addr $request_time $upstream_response_time '
+                           '"$http_user_agent" "$http_x_forwarded_for"' ;
         ##
         # Gzip Settings
         ##
